objects/APL_Billing_Result_of_Covnerted_Opp__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity_Partner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Opportunity_Partner__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>Opportunity_Partner__r.STATDESC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Amount_current_prior__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Bill_Amount_current_prior__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Amount current prior</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Amount_on_YBB__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Bill_Amount_on_YBB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Amount on YBB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_1_Amount_Document__c</fullName>
        <label>Bill Prior Year -1 Amount -Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_1_Amount_USD__c</fullName>
        <label>Bill Prior Year -1 Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_1_Qty__c</fullName>
        <label>Bill Prior Year -1 Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_1_to_Date_Amount_Do__c</fullName>
        <label>Bill Prior Year -1 to Date Amount - Do</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_1_to_Date_Amount_US__c</fullName>
        <label>Bill Prior Year -1 to Date Amount - US</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_1_to_Date_Qty__c</fullName>
        <label>Bill Prior Year -1 to Date Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_Amount_Document__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Bill_Prior_Year_Amount_Document__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Prior Year Amount - Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_Amount_USD__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Bill_Prior_Year_Amount_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Prior Year Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_Qty__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Bill_Prior_Year_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Prior Year Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_To_Date_Qty__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Bill_Prior_Year_To_Date_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Prior Year To Date Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_to_Date_Amount_Doc__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Bill_Prior_Year_to_Date_Amount_Document__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Prior Year to Date Amount - Doc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_to_Date_Amount_USD__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Bill_Prior_Year_to_Date_Amount_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Prior Year to Date Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Quantity_on_YBB__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Bill_Quantity_on_YBB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Quantity on YBB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Type__c</fullName>
        <formula>CASE( Yearly_Booking_Billings_By_Part__r.Bill_Type__c ,&apos;Direct&apos;,&apos;Direct&apos;,&apos;POS&apos;,&apos;POS&apos;,&apos;CMA&apos;,&apos;CMA&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Year_To_Date_Qty__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Bill_Year_To_Date_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Year To Date Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Year_to_Date_Amount_Document__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Bill_Year_to_Date_Amount_Document__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Year to Date Amount - Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Year_to_Date_Amount_USD__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Bill_Year_to_Date_Amount_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Year to Date Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billings_Month_10__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Billings_Month_10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billings Month 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billings_Month_11__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Billings_Month_11__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billings Month 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billings_Month_12__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Billings_Month_12__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billings Month 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_Prior_Year_Amount_Document__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Book_Prior_Year_Amount_Document__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Prior Year Amount - Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_Prior_Year_Amount_USD__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Book_Prior_Year_Amount_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Prior Year Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Prior_Year_Qty__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Book_Prior_Year_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Prior Year Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Prior_Year_To_Date_Amount_Doc__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Book_Prior_Year_To_Date_Amount_Document__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Prior Year To Date Amount - Doc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_Prior_Year_To_Date_Amount_USD__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Book_Prior_Year_To_Date_Amount_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Prior Year To Date Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Prior_Year_To_Date_Qty__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Book_Prior_Year_To_Date_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Prior Year To Date Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Year_To_Date_Amount_Document__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Book_Year_To_Date_Amount_Document__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Year To Date Amount - Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_Year_To_Date_Amount_USD__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Book_Year_To_Date_Amount_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Year To Date Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Year_To_Date_Qty__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Book_Year_To_Date_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Year To Date Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBC1__c</fullName>
        <formula>Part__r.CBC_1_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC2__c</fullName>
        <formula>Part__r.Product_Hierarchy__r.CBC2_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diff_QTY__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Difference_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff. QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Difference_Value_Document_Currency__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Difference_Value_Document_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference Value Document Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Difference_Value_USD__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Difference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference Value USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GAM_Name__c</fullName>
        <formula>Opportunity_Partner__r.GAMDESC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL__c</fullName>
        <formula>Part__r.GPL_txt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Partner__c</fullName>
        <label>Opportunity Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>APL Billing Result of Covnerted Opps</relationshipLabel>
        <relationshipName>APL_Billing_Result_of_Covnerted_Opps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>APL Billing Result of Covnerted Opps</relationshipLabel>
        <relationshipName>APL_Billing_Result_of_Covnerted_Opps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <formula>Part__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <formula>Part__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>APL Billing Result of Covnerted Opps</relationshipLabel>
        <relationshipName>APL_Billing_Result_of_Covnerted_Opps</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Code_Name__c</fullName>
        <formula>Part__r.PROD_NAME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Part__r.PRODUCT_CDE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.BU_Profit_Center__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regain_Business_Action_Year__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Regain_Business_Action_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regain Business Action Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reseller_Account_Number__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Reseller_Customer__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reseller Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_Customer__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Reseller_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reseller Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Y_Bill_Amount_current_prior__c</fullName>
        <formula>Yearly_Booking_Billings_By_Part__r.Bill_Amount_current_prior__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Amount current prior</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Booking_Billings_By_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Yearly Booking/Billings By Part</label>
        <referenceTo>BBB_Year_Bill_Book_Cust_PN__c</referenceTo>
        <relationshipLabel>APL Billing Result of Covnerted Opps</relationshipLabel>
        <relationshipName>APL_Billing_Result_of_Covnerted_Opps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>APL Billing Result of Covnerted Opp</label>
    <nameField>
        <displayFormat>BillResult-{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APL Billing Result of Covnerted Opps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>